fixed wrapping issue with header h1 element

--- a/gvlswing/static/resources/css/style.css
+++ b/gvlswing/static/resources/css/style.css
@@ -99,6 +99,7 @@ footer * {
 .welcome-textbox h1, span {
     /* assumes all contents within are text based (inline) */
     display: inline-block;
+    white-space: nowrap;
     margin-bottom: 2%;
 }
 
